# DeepImageMatting

./: AnalyseModel_Omer.txt  CMakeLists.txt  README.md  calculate_mean.py
BGS_scripts/: all_bags.txt  batch4-7_images.txt  batch4-7_videos.txt  batch8_images_test.txt  batch_8_images_lists.txt  cmd_2_run_images.txt  convert_to_dlc.sh  get_one_data_list.sh  get_temporal_data_list.sh  new_test_list.txt  new_train_list.txt  new_train_list_no_videos.txt  new_train_list_wo_batch_4-7.txt  new_train_list_wo_test.txt  renameDepthFfiles.py  test_list_set1.txt  test_list_small.txt  train_list.txt
cmake/: Dependencies.cmake
python/: TF_utils.py  \  add_dumps.py  add_dumps.sh  add_zero_weights_channel.py  adversarial_data_augmentation.py  benchmark_utils.py  bgs_train_test.py  bgs_train_test_gtAsPrev.py  bin_2_png.py  connect.py  convert_train_to_deploy.py  createTrnTstLists.py  create_train_dir_by_loss.py  data_augmentation.py  data_augmentation_old.py  data_overlay.py  data_provider.py  data_provider_gtAsPrev.py  data_provider_time_smoothing.py  find_depth_fill_rate.py  freeze_graph.py  fs_metrics.py  mixup_tester.py  netBlobsShapes.py  plot_test_images.py  publish_utils.py  random_image_reconstruction.py  renameDataSet_forTemporal.py  request.json  run_TF_freezedModel.py  save_SDS_masks.py  save_depth_tree.py  save_norm_depth_tree.py  showGradients.py  showMeanKernels.py  showPathWeights.py  showRegularizationWeights.py  showTopsFromLMDB.py  (+7 more)
src/caffewrapper/: CMakeLists.txt
src/caffewrapper/include/: CaffeLayerShape.h  CaffeWrapper.h
src/caffewrapper/src/: CaffeWrapper.cpp
(+120 files in other folders)
